syntax = "proto3";option java_multiple_files = true;package com.account;message UserAccountReq {  int32 id = 1;  string name = 2;  int32 agent_id = 3;}message UserAccountRes {  bool response = 1;}message AccountChoreReq {  int32 id = 1;  string name = 2;  string rollbackId = 3;}message AccountChoreRes {  bool response = 1;}service AccountService {  rpc transactionalCompensation(UserAccountReq) returns (UserAccountRes);  rpc accountChoreSave(AccountChoreReq) returns (AccountChoreRes);}